# toasted

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: call.json  image.json  input.json  showcase.py  typography.json
toasted/: __init__.py  common.py  elements.py  enums.py  filesystem.py  history.py  toast.py
winrt-stubs/system/: __init__.pyi
winrt-stubs/windows/data/xml/: dom.pyi
winrt-stubs/windows/foundation/: __init__.pyi
winrt-stubs/windows/ui/: notifications.pyi  viewmanagement.pyi
winrt-stubs/windows/ui/notifications/: __init__.pyi
winrt-stubs/windows/ui/viewmanagement/: __init__.pyi
