[project]
name = "toasted"
version = "0.2.0"
authors = [{ name = "ysfchn" }]
description = "Toast notifications library for Windows, built on top of WinRT."
license.file = "LICENSE"
readme = "README.md"
urls = { "Source Code" = "https://github.com/ysfchn/toasted" }
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
requires-python = ">=3.9"
dependencies = [
    "httpx~=0.20.0",
    "winsdk~=1.0.0b6",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"
