[project]
name = "toasted"
version = "0.2.0"
authors = [{ name = "ysfchn" }]
description = "Toast notifications library for Windows, built on top of WinRT."
license.file = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "httpx~=0.25.0",
    "Pillow~=10.2.0",
    "winsdk~=1.0.0b6 ; platform_system == 'Windows'"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["toasted"]

[project.urls]
"GitHub" = "https://github.com/ysfchn/toasted"
"Sponsor" = "https://github.com/sponsors/ysfchn"

[tool.rye]
dev-dependencies = [
    "ruff~=0.0.290"
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"
