[project]
name = "toasted"
version = "0.2.1"
authors = [{ name = "ysfchn" }]
description = "Toast notifications library for Windows, built on top of WinRT."
license.file = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "httpx",
    "Pillow",
    "winrt-Windows.UI.ViewManagement~=2.2.0 ; sys_platform == 'win32'",
    "winrt-Windows.Foundation~=2.2.0 ; sys_platform == 'win32'",
    "winrt-Windows.UI.Notifications~=2.2.0 ; sys_platform == 'win32'",
    "winrt-Windows.UI~=2.2.0 ; sys_platform == 'win32'",
    "winrt-Windows.Storage~=2.2.0 ; sys_platform == 'win32'",
    "winrt-Windows.Data.Xml.Dom~=2.2.0 ; sys_platform == 'win32'",
    # Not directly used by Toasted, but appearently it is required for toast
    # dismissed events, otherwise it raises an exception.
    "winrt-Windows.Foundation.Collections~=2.2.0 ; sys_platform == 'win32'"
]
requires-python = ">=3.9"

[project.urls]
"GitHub" = "https://github.com/ysfchn/toasted"
"Sponsor" = "https://github.com/sponsors/ysfchn"

[tool.setuptools]
packages = ["toasted"]

[tool.rye]
dev-dependencies = [
    "ruff~=0.0.290"
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportDeprecated = "none"
typeCheckingMode = "standard"
reportMissingModuleSource = "none"
# pythonPlatform = "Windows"
